# inventory-management-cpp

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  test_sqlite.cpp
db/: inventory.db
public/: app.js  index.html  style.css
src/: api.cpp  api.h  database.cpp  database.h  inventory.cpp  inventory.h  main.cpp
